--- a/src/main/resources/templates/student/create.html
+++ b/src/main/resources/templates/student/create.html
@@ -2,32 +2,34 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Create Student</title>
+    <title>Thêm Học viên mới </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
-<body>
-<h1>Create student</h1>
+<body style="margin: auto ; text-align: center">
+<h1>Create Student</h1>
+
 <th:block th:if="${message}">
     <p th:text="${message}"></p>
 </th:block>
-<form th:action="@{/student/create}" th:object="${student}" method="post">
-    <table>
+<form th:action="@{/student/create}" th:object="${student}" method="post" style="margin-right: auto; margin-left: auto">
+    <table style="margin-right: auto; margin-left: auto; text-align: left" >
         <tr>
-            <td>Student name:</td>
-            <td><input type="text" placeholder="Student name" th:field="*{name}" style="width: 200px"/></td>
-            <p th:if="${#fields.hasErrors('studentName')}" th:errors="*{name}"></p>
+            <td>Tên học viên:</td>
+            <td><input type="text" placeholder="Student name" th:field="*{studentName}" style="width: 200px"/></td>
+            <p th:if="${#fields.hasErrors('studentName')}" th:errors="*{studentName}"></p>
             <p th:text="${message}"></p>
         </tr>
         <tr>
-            <td>Date of birth :</td>
-            <td><input type="text" placeholder="yyyy-MM-DD" th:field="*{doB}" style="text-align: left; width: 200px"/></td>
+            <td>Ngày sinh :</td>
+            <td><input type="date" placeholder="Năm-Tháng-Ngày" th:field="*{doB}" style="text-align: left; width: 200px"/></td>
         </tr>
         <tr>
-            <td>Address:</td>
+            <td>Địa chỉ:</td>
             <td><input type="text" placeholder="Address" th:field="*{address}" style="width: 200px"/></td>
         </tr>
 
         <tr>
-            <td>Phone Number:</td>
+            <td>Số điện thoại:</td>
             <td><input type="String" placeholder="phone number" th:field="*{phoneNumber}" style="width: 200px"/></td>
             <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></p>
         </tr>
@@ -36,7 +38,7 @@
             <td><input type="text" th:field="*{email}" style="width: 200px"/></td>
             <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
         </tr>
-        <td>Class room</td>
+        <td>Lớp</td>
         <td>
             <select th:field="*{classRoom}"  style="width: 200px">
                 <option value="">Class</option>
@@ -45,10 +47,11 @@
         </td>
         <tr>
             <td></td>
-            <td><input type="submit" value="Create student" class="btn btn-info">
-                <a class="btn btn-info" href="/student/list">Back List</a></td>
+            <td><input type="submit" value="Thêm học viên" class = "btn btn-light">
+                <a class = "btn btn-light" href="/student/list">Quay lại danh sách</a></td>
         </tr>
     </table>
 </form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
