--- a/src/main/resources/templates/student/delete.html
+++ b/src/main/resources/templates/student/delete.html
@@ -2,29 +2,28 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Delete student</title>
+    <title>Xóa học viên</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
-<body>
-<h1>Delete Student</h1>
-<h2>Are you sure?</h2>
+<body style="text-align: center">
+<h1>Xóa học viên</h1>
 
 <form th:action="@{/student/delete}" th:object="${student}" method="post">
-    <input th:type="hidden" name="id" th:field="*{id}">
-    <table>
+    <table style="margin-right: auto; margin-left: auto; text-align: left">
         <tr>
-            <td>Student name:</td>
-            <td th:text="${student.name}"></td>
+            <td>Tên học viên</td>
+            <td th:text="${student.studentName}"></td>
         </tr>
         <tr>
-            <td>Date of birth:</td>
+            <td>Ngày sinh</td>
             <td th:text="${student.doB}"></td>
         </tr>
         <tr>
-            <td>Address:</td>
+            <td>Địa chỉ:</td>
             <td th:text="${student.address}"></td>
         </tr>
         <tr>
-            <td>Phone number:</td>
+            <td>Số điện thoại: </td>
             <td th:text="${student.phoneNumber}"></td>
         </tr>
         <tr>
@@ -32,13 +31,16 @@
             <td th:text="${student.email}"></td>
         </tr>
         <tr>
-            <td>Class room:</td>
+            <td> Lớp học:</td>
             <td th:text="${student.classRoom}"></td>
         </tr>
         <tr>
             <td></td>
+            <td><input type="submit" value="Xóa học viên " class="btn btn-danger">
+                <a href="/student/list" class="btn btn-light">Quay lại</a></td>
         </tr>
     </table>
 </form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
