--- a/src/main/resources/templates/student/list.html
+++ b/src/main/resources/templates/student/list.html
@@ -2,43 +2,46 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>List Student</title>
+    <title>Danh sách học viên</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
 
-    <div>
-        <a><h1>List Student</h1> </a>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand"><h1>Danh sách học viên</h1> </a>
 
-        <form class="d-flex" action="@{/student/create}" method="post">
-            <input type="text" placeholder="Search" name="searchName">
-            <input type="hidden" name="action" value="searchByName">
-            <button class="btn btn-primary" type="submit">Search</button>
+        <form class="d-flex">
+            <input class="input-group-text" type="text" placeholder="Tìm kiếm" name="search">
+            <input type="hidden" name="action" value="Tìm kiếm">
+            <input type="submit" value="Tìm kiếm">
         </form>
-        <a href="/student/showFormCreate" >Create new Student</a>
+        <a href="/student/create" class="btn btn-outline-success">Thêm mới học viên</a>
     </div>
 </nav>
 <table border="1" class="table" style="text-align: center">
     <tr>
-        <th>Student name</th>
-        <th>Date of birth</th>
-        <th>Address</th>
-        <th>Phone number</th>
+        <th>Tên Sinh Viên</th>
+        <th>Ngày sinh</th>
+        <th>Địa chỉ</th>
+        <th>Số điện thoại</th>
         <th>Email</th>
-        <th>Class room</th>
-        <th colspan="2">feature</th>
+        <th>Lớp học</th>
+        <th colspan="2"></th>
     </tr>
     <th:block th:each="student : ${students}">
         <tr>
-            <td th:href="@{/student/delete/__${student.id}__}" th:text="${student.name}"></td>
+            <td th:href="@{/student/delete/__${student.id}__}" th:text="${student.studentName}"></td>
             <td th:text="${student.doB}"></td>
             <td th:text="${student.address}"></td>
             <td th:text="${student.phoneNumber}"></td>
             <td th:text="${student.email}"></td>
-            <td th:text="${student.classRoom}"></td>
-            <td><a th:href="@{/student/edit/__${student.id}__}" class="btn btn-info">Edit</a></td>
-            <td><a th:href="@{/student/delete/__${student.id}__}" class="btn btn-danger">Delete</a></td>
+            <td th:text="${student.classRoom?.className}"></td>
+            <td><a th:href="@{/student/edit/${student.id}}" class="btn btn-light">Sửa</a></td>
+            <td><a th:href="@{/student/delete/${student.id}}" class="btn btn-light">Xóa</a></td>
         </tr>
     </th:block>
 </table>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
